--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
           <div class="right">
             <div class="topic">Summary</div>
             <p>
-                Driven Artificial Intelligence Engineering and Data Science graduate from Bangkok University with a passion for extracting meaningful insights from data. 
-                Strong foundation in Python programming. Seeking an entry-level Data Scientist role to leverage skills in AI-powered solutions 
-                and collaborate in a dynamic environment. Eager to learn and contribute to solving complex data challenges.
+                Data Scientist with hands-on experience in building data pipelines, automating ETL processes, and developing web-based analytics solutions using Python, SQL, 
+              and cloud technologies. Proven ability to deliver impactful results in both corporate and freelance projects by collaborating with cross-functional teams. 
+              Passionate about continuous learning and always open to new challenges. Actively seeking opportunities to learn from and be mentored 
+              by experienced colleagues in order to grow and deliver even greater value to organizations.
             </p><br/><br/>
             <p>
-              สวัสดีค่ะ นุ่นนะคะ เพิ่งสำเร็จการศึกษาจากคณะวิศวกรรมศาสตร์ สาขาวิศวกรรมปัญญาประดิษฐ์และวิทยาศาสตร์ข้อมูลโดยตรงจากมหาวิทยาลัยกรุงเทพ ด้วยเกียรตินิยมอันดับ 1 
-              มีแพชชั่นในการหา insights จากข้อมูล มีพื้นฐานในการเขียนโปรแกรมไม่ว่าจะ Python, HTML, CSS, JavaScript etc.
+              สวัสดีค่ะ นุ่นนะคะ ปัจจุบันทำงานตำแหน่ง Data Scientist มีประสบการณ์จริงในการออกแบบและพัฒนาระบบ Data Pipeline, Automation ETL และสร้างโซลูชันวิเคราะห์ข้อมูลบนเว็บโดยใช้ 
+              Python, SQL สามารถทำงานที่ตอบโจทย์ธุรกิจทั้งในองค์กรและงานฟรีแลนซ์ พร้อมปรับตัวทำงานร่วมกับหลายฝ่ายได้ มีใจรักการเรียนรู้สิ่งใหม่ ๆ อยู่เสมอ และเปิดรับคำแนะนำจากผู้มีประสบการณ์ 
+              เพื่อพัฒนาตนเองและสร้างคุณค่าให้กับองค์กร
               กำลังมองหางานในตำแหน่ง Data Scientist ,Data Analysis หรือด้าน AI เพื่อนำทักษะความรู้ที่ได้เรียนมาขับเคลื่อนด้วย AI 
-              มาใช้และทำงานร่วมกัน นุ่นพร้อมที่จะเรียนรู้สิ่งใหม่ ๆ และทำหน้าที่อย่างเต็มที่แน่นอนค่ะ
+              นุ่นพร้อมที่จะเรียนรู้สิ่งใหม่ ๆ และทำหน้าที่อย่างเต็มที่แน่นอนค่ะ
             </p>
             <div class="button">
                 <a href="files/Chaleerat_resume.pdf" download>
@@ -115,11 +117,10 @@
             <div class="box">
               <div class="topic">tools </div>
               <ul class="per">
-                <li>SPSS</li>
                 <li>Tableau</li>
                 <li>Power BI</li>
-                <li>Looker</li>
-                <li>Rapid Miner</li>
+                <li>Streamlit</li>
+                <li>Dagster</li>
               </ul>
             </div>
             <div class="box">
@@ -131,7 +132,6 @@
                   <li>Pandas</li>
                   <li>YOLO</li>
                   <li>openCV</li>
-                  <li>Node.js</li>
                   <li>Django</li>
                 </ul>
               </div>
@@ -140,6 +140,7 @@
                 <ul class="per">
                   <li>Google Cloud Platform (GCP)</li>
                   <li>Firebase</li>
+                  <li>AWS</li>
                   <li>Git</li>
                   <li>Docker</li>
                 </ul>
